compilateurDeca/src/test/deca/syntax/valid/sans_objet/empty_instructions.deca



// Description:
//
// teste instructions vides
// Historique:09/01/2026
{
    ;
    ;
}