compilateurDeca/src/test/deca/syntax/invalid/objet/extends.deca
// Description:
//    Extends sans IDENT
// Resultats:
//    Missing IDENT
//
// Historique:
//    cree le 15/01/2026
class B extends {
}
{
}
